--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
-node_modules
-dist
+# dependencies
+node_modules/
+
+# build output
+dist/
+
+# env (do not commit secrets)
+.env
+.env.*
+!.env.example
+
+# tooling/OS
+.vite/
 .DS_Store
-*.log
-
-
+npm-debug.log*
+yarn-error.log*
+pnpm-lock.yaml
+yarn.lock
+coverage/
